--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.3",
     "prisma": "^6.9.0"
   },
   "devDependencies": {
@@ -26,6 +28,8 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^24.0.0",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react-big-calendar": "^1.16.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
